# voronoi-begin

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.gitea/workflows/: cicd.yaml
Apps/: CMakeLists.txt
Apps/DemoApp/: CMakeLists.txt  main.cpp
Apps/QtDemoApp/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/MyLibs/: CMakeLists.txt
Modules/MyLibs/LibEx/: API.cpp  API.h  CMakeLists.txt
Tests/: CMakeLists.txt
